--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aceffd">  <td>21/10/16 16:27:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="otherTest.CheckTest()[pri:0, instance:Google_Test.otherTest@5f4d427e]">CheckTest</td> 
-  <td>main@95322593</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>21/10/16 16:27:44</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;googleTest.close()[pri:0, instance:Google_Test.googleTest@2ce86164]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@95322593</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>21/10/16 16:27:44</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;googleTest.close()[pri:0, instance:Google_Test.googleTest@2ce86164]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@95322593</td>   <td></td> </tr>
-<tr bgcolor="a487af">  <td>21/10/16 16:27:44</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.googlelaunch()[pri:0, instance:Google_Test.NewTest@37f21974]">googlelaunch</td> 
-  <td>main@95322593</td>   <td></td> </tr>
-<tr bgcolor="a487af">  <td>21/10/16 16:27:44</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launch()[pri:0, instance:Google_Test.NewTest@37f21974]">launch</td> 
-  <td>main@95322593</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>21/10/16 16:27:41</td>   <td>-3969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.test()[pri:0, instance:Google_Test.googleTest@2ce86164]">test</td> 
-  <td>main@95322593</td>   <td></td> </tr>
-<tr bgcolor="7277dc">  <td>21/10/16 16:27:44</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.testsuccess()[pri:0, instance:Google_Test.googleTest@2ce86164]">testsuccess</td> 
-  <td>main@95322593</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/17 21:20:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="googleTest.launchwebsite()[pri:0, instance:Google_Test.googleTest@5ba3f27a]">launchwebsite</td> 
+  <td>main@627318073</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/17 21:20:26</td>   <td>-12634</td> <td title="&gt;&gt;googleTest.setup()[pri:0, instance:Google_Test.googleTest@5ba3f27a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@627318073</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>21/10/17 21:20:38</td>   <td>137</td> <td title="&lt;&lt;googleTest.teardown()[pri:0, instance:Google_Test.googleTest@5ba3f27a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@627318073</td>   <td></td> </tr>
 </table>
